執行 dotnet user-jwts create 命令建立 JWT Token

--- a/AspNetCoreUserJwtsDemo.csproj
+++ b/AspNetCoreUserJwtsDemo.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>98ca3101-9491-4d1c-98d9-d44e2da12ea0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
